set card+action button mobile paddings, fix image alignment in Cube

--- a/src/Cards/Cube/Cube.module.css
+++ b/src/Cards/Cube/Cube.module.css
@@ -34,6 +34,7 @@
 
 .showcase {
     display: flex;
+    align-items: center;
     gap: 20px;
 }
 
